--- a/style.css
+++ b/style.css
@@ -205,3 +205,9 @@ section.title-desc-links-cont {
     border-radius: 4px;
     font-size: 14px;
 }
+
+.output-value-cont {
+    background: #002d3f;
+    padding: 2%;
+    color: white;
+}
