--- a/style.css
+++ b/style.css
@@ -165,26 +165,24 @@ section.title-desc-links-cont {
 }
 
 .pain-slider::-webkit-slider-thumb {
-    background: red;
-    color: red;
+    background: blue;
     cursor: pointer;
-    height: 50px;
-    width: 50px;
+    height: 20px;
+    width: 20px;
     margin-bottom: 15px;
 }
 
 .pain-slider::-moz-range-thumb {
-    background: red;
-    color: red;
+    background: #007BFF;
     cursor: pointer;
-    height: 50px;
-    width: 45px;
+    height: 20px;
+    width: 20px;
 } 
 
 .pain-slider::-webkit-slider-runnable-track {
     width: 100%;
     height: 8px; /* Adjust the height if needed */
-    background: green;
+    background: #007BFF;
     border-radius: 4px; /* Optional: rounded corners */
     cursor: pointer;
 }
